# AP-PROJ2

./: A*  Adapter.h  Astar.h  BFS  BFS.h  BasicString.h  BestFirstSearch  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  Client.cpp  Client.h  ClientHandler.h  Coordinates.h  DFS  DFS.h  FileCacheManager.h  FinalClientHandler.h  GeneralServer.cpp  GeneralServer.h  GeneralSocket.cpp  GeneralSocket.h  ISearchable.h  ISearcher.h  Main.h  Matrix.h  Matrix1.txt  Matrix10.txt  Matrix2.txt  Matrix3.txt  Matrix4.txt  Matrix5.txt  Matrix6.txt  Matrix7.txt  Matrix8.txt  Matrix9.txt  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  (+10 more)
